added Phoxul Studio

--- a/index.html
+++ b/index.html
@@ -49,23 +49,26 @@
       <!-- Links -->
       <div class="row">
         <p class="lead lead2">
+          <a href="https://johnnymh.github.io/phoxul-studio/" class="btn btn-primary"
+            >Phoxul Studio</a
+          >
           <a href="https://johnnymh.github.io/postbox/" class="btn btn-primary"
             >PostBox</a
           >
           <a
             href="https://johnnymh.github.io/guessmynumber/"
             class="btn btn-primary"
-            >GuessMyNumber</a
+            >GuessMyNumber(PC)</a
           >
           <a
             href="https://johnnymh.github.io/modalwindow/"
             class="btn btn-primary"
-            >ModalWindow</a
+            >ModalWindow(PC)</a
           >
           <a
             href="https://johnnymh.github.io/thepiggame/"
             class="btn btn-primary"
-            >ThePigGame</a
+            >ThePigGame(PC)</a
           >
         </p>
       </div>
